# mixed_pkg

./: README.md  c_helpersmodule.c  factors.c  factors.h  meson.build  pyproject.toml  tests.py
.github/workflows/: publish.yml
src/mixed_pkg/: __init__.py  c_helpersmodule.c
