[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "mixed_pkg"
description = "A module containing both C and Python code"
version = "0.10"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/PT-Hrothgar/mixed_pkg"

[tool.cibuildwheel]
before-all = "uname -a"
skip = "cp314-macosx_*"
