[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "mixed_pkg"
description = "A module containing both C and Python code"
version = "0.11"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "https://github.com/PT-Hrothgar/mixed_pkg"

[tool.cibuildwheel]
before-all = "uname -a"
skip = "cp314-macosx_*"
